# people

./: CMakeLists.txt  LICENSE  People.pro  application.ui  main.cpp  resources.qrc
gui/: application.ui
gui/camera/: camerasettings.ui  photographer.ui
gui/dialogs/: personeditdialog.ui  personeditor.ui  personviewer.ui
gui/widgets/: personedit.ui  personview.ui
include/: application.h  saverequirement.h
include/camera/: camerasettings.h  photographer.h
include/data/: differencedate.h  firstnamevalidator.h  lastnamevalidator.h  person.h
include/dialogs/: aboutdialog.h  personeditdialog.h  personeditor.h  personviewer.h
include/image/: imageview.h
include/model/: peopledelegate.h  peoplemodel.h
include/widgets/: personedit.h  personview.h
resources/: resources.qrc
src/: application.cpp  application.h  saverequest.cpp  saverequest.h  saverequirement.cpp
src/app/: core.cpp  edit.cpp  file.cpp  interaction.cpp
src/camera/: camerasettings.cpp  camerasettings.h  photographer.cpp
src/data/: differencedate.cpp  firstnamevalidator.cpp  lastnamevalidator.cpp  person.cpp
src/dialogs/: aboutdialog.cpp  abstractinterface.cpp  abstractinterface.h  personeditdialog.cpp  personeditor.cpp  personeditor.h  personviewer.cpp  personviewer.h
src/image/: imageview.cpp
src/model/: peopledelegate.cpp  peoplemodel.cpp
src/widgets/: imagefile.cpp  personedit.cpp  personedit.h  personview.cpp
ui/camera/: photographer.ui
ui/dialogs/: aboutdialog.ui  personviewer.ui
